--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <h1>semaforo</h1>
     <div class="cajasemaforo">
         <div class="luzsemaforo" id="red"></div> 
         <div class="luzsemaforo" id="yellow"></div> 
