--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         .cajasemaforo{
             padding:10px;
-            width:58px;
+            width:56px;
             border: 1px solid black;
             border-radius: 30px;
             margin: 0 auto;
@@ -43,13 +43,13 @@
         function cambiarColor(id, prender)
         {
             var color='grey';
-            if(prender) color =id;
+            if(prender==true) color =id;
             document.querySelector('#'+id).style.backgroundColor=color
         }
 
-        cambiarColor('red', true);
+        cambiarColor('red', !true);
         cambiarColor('yellow', false);
-        cambiarColor('green', !true);
+        cambiarColor('green', true);
     </script>
 </body>
 </html>
